# bcm

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  qsub
data/: bcmir0  bcms01  bcms02  bcms2
etc/: bcmctr.C15  bcmctr.f20  bcmin.f00  calctr
init/: bcmfn  bsim.d  cal.start  cal5.start  cal6.start  cal7.start
src/: bcm.f  cal.f  cal.v5
