#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(BCM,1.0, michel.crucifix@uclouvain.be) 
AM_INIT_AUTOMAKE(BCM,1.0, michel.crucifix@uclouvain.be) 


# Checks for programs.

AC_PROG_F77([ifort gfortran gfortran-mp-5 g77 f90 xlf90])
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
